force-app/main/default/objects/ARF_Autopay_Schedule__c/ARF_Autopay_Schedule__c.object-meta.xml
<CustomObject>
    <description>Autopay schedule configuration for automatic recurring payments</description>
    <label>Autopay Schedule</label>
    <nameField>
        <displayFormat>APS-{0000}</displayFormat>
        <label>Autopay Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Autopay Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>