force-app/main/default/objects/ARF_Autopay_Schedule__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Account for autopay</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Autopay Schedules</relationshipLabel>
    <relationshipName>Autopay_Schedules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>