force-app/main/default/objects/ARF_Autopay_Schedule__c/fields/Fixed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Amount__c</fullName>
    <description>Fixed amount to pay each cycle (used with Fixed Amount rule type)</description>
    <label>Fixed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>