force-app/main/default/objects/ARF_Autopay_Schedule__c/fields/Last_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Date__c</fullName>
    <description>Date of last autopay execution</description>
    <label>Last Run Date</label>
    <type>Date</type>
</CustomField>