force-app/main/default/objects/ARF_Autopay_Schedule__c/fields/Next_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Run_Date__c</fullName>
    <description>Next scheduled autopay date</description>
    <label>Next Run Date</label>
    <type>Date</type>
</CustomField>