force-app/main/default/objects/ARF_Autopay_Schedule__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>Payment method to charge on autopay</description>
    <label>Payment Method</label>
    <referenceTo>ARF_Payment_Method__c</referenceTo>
    <relationshipLabel>Autopay Schedules</relationshipLabel>
    <relationshipName>Autopay_Schedules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>