force-app/main/default/objects/ARF_Autopay_Schedule__c/fields/Schedule_Day__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Day__c</fullName>
    <description>Day of month to run autopay (1-28)</description>
    <label>Schedule Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>